fixed overflow issue

--- a/src/Pages/Dashboards/Dashboard.css
+++ b/src/Pages/Dashboards/Dashboard.css
@@ -79,13 +79,14 @@
     flex-direction: column;
     flex: 0.29;
     width: 21%;
-    height: 84%;
+    height: 84vh;
     background-color: #0B0C0C;
     position: fixed;
     right: 0;
     margin: 0 1% 2% 0;
     padding: 1% 2%;
     border-radius: 6px;
+    overflow-y: auto;
 }
 
 .irs-align {
